--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,11 @@
 name: "Common airport Checkin"
 
-on:
-  schedule:
-    - cron: "0 14 * * *"  # scheduled at 06:00 (UTC+8) everyday
-  workflow_dispatch:
+on: {}  # 不触发任何事件，相当于禁用
+
+#on:
+  #schedule:
+    #- cron: "0 14 * * *"  # scheduled at 06:00 (UTC+8) everyday
+  #workflow_dispatch:
 
 env:
   RUN_ENV: 'prod'
